<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings existentes mantidas -->
    <string name="app_name">TreinoAcademia</string>

    <!-- Login -->
    <string name="login_logo_content_description">logo app de treino</string>
    <string name="login_welcome_text">Gerencie seus treinos com facilidade</string>
    <string name="login_description_text">Faça login ou cadastre-se</string>
    <string name="login_email_hint">Digite seu e-mail</string>
    <string name="login_password_hint">Crie uma senha</string>
    <string name="login_enter_the_app_button">Entrar</string>
    <string name="login_register_text">Criar conta</string>
    <string name="login_email_error_message_text">Email no formato inválido</string>
    <string name="login_password_error_message_text">Senha deve ser no mínimo 6 digitos </string>
    <string name="login_User_authenticated_successfully_toast">Usuário autenticado com sucesso</string>
    <string name="login_unauthenticated_user">Usuário não autorizado!</string>
    <string name="login_no_internet_connection_error">Sem conexão com a internet. Tente novamente!</string>
    <string name="login_server_error">Erro de servidor, tente mais tarde!</string>
    "

    <!-- Register -->
    <string name="register_account_toolbar">Cadastrar conta</string>
    <string name="register_successfully_registered_user">Usuário cadastrado com sucesso</string>
    <string name="register_title_text">Crie sua conta para começar a treinar!</string>
    <string name="register_failed_to_register_user">Falha ao registrar usuário, tente novamente!</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="register_email_error_message_text">Email no formato inválido ou senha inválida</string>
    <string name="register_password_error_message_text">Senha deve no mínimo 6 digitos</string>
    <string name="register_email_already_registered">Conta já cadastrada, tente novamente!</string>

    <!-- Home -->
    <string name="home_title_text">Treinos</string>
    <string name="home_create_text">Criar treino</string>
    <string name="home_list_text">Meus treinos</string>
    <string name="home_button_add_description">Botão adicionar</string>
    <string name="home_error_reading_data_text">Nenhum treino cadastrado!</string>
    <string name="home_error_reading_data_from_server_toast">Erro ao ler dados do servidor</string>

    <!-- TrainingCreation -->
    <string name="training_creation_title_text">Criar Treino</string>
    <string name="training_creation_description_text">Defina o nome do treino</string>
    <string name="training_creation_type_text">Ex: treino de peito</string>
    <string name="training_creation_success_saving_data">Treino criado com sucesso</string>
    <string name="training_creation_error_saving_data">Erro ao criar treino</string>
    <string name="training_empty_field_text">Campo de treino vazio ou sem exercício adicionado</string>
    <string name="training_creation_add_exercises_text">Adicionar Exercícios</string>
    <string name="training_creation_button_description">Botão criar treino</string>
    <string name="training_creation_button">Criar Treino</string>

    <!-- exercises -->
    <string name="exercises_title_text">Adicionar Exercícios</string>
    <string name="exercises_save_text">Salvar Exercícios</string>
    <string name="exercises_error_reading_data">Erro ao ler documento, ele não existe ou está vazio</string>
    <string name="exercises_error_reading_data_from_server">Erro ao ler dados do servidor</string>
    <string name="exercises_successfully_added_text">Exercícios adicionados com sucesso!</string>
    <string name="empty_exercise_list_error">Nenhum exercício disponível</string>
    <string name="server_error">Erro ao acessar o servidor</string>
    <string name="no_exercises_selected_error">Nenhum exercício selecionado</string>
    <string name="error_saving_exercises">Erro ao salvar exercícios</string>

    <!-- remove_exercise_item -->
    <string name="remove_exercise_item_image_description">Imagem do exercício</string>
    <string name="remove_exercise_item_delete_button">Botão Excluir Exercício</string>
    <string name="remove_exercise_series_text">Séries:</string>
    <string name="remove_exercise_repetitions_text">Repetições:</string>
    <string name="remove_exercise_weights_or_bars_text">Kg/Barras:</string>

    <!-- training_details -->
    <string name="training_details_informative_text_view">Exercícios do treino</string>
    <string name="training_details_delete_button">Deletar</string>
    <string name="training_details_success_deleting_training">Sucesso ao deletar treino</string>
    <string name="training_details_error_deleting_training">Erro ao deletar treino</string>

    <!-- update_training -->
    <string name="update_training_button">Atualizar</string>
    <string name="update_training_title_toolbar">Atualizar Treino</string>
    <string name="update_training_button_description">Botão atualizar treino</string>
    <string name="update_training_successfully_updated">Treino atualizado com sucesso</string>
    <string name="update_training_error_when_updating_data">Erro ao atualizar treino</string>

    <!-- activity_extensions -->
    <string name="alert_dialog_message_text">Deseja excluir esse treino?</string>
    <string name="alert_dialog_positive_message_text">Sim</string>
    <string name="alert_dialog_negative_message_text">Não</string>
    <string name="alert_dialog_continue_text">OK</string>
    <string name="theme_toggle_desc">Alternar tema escuro/claro</string>
    <string name="dark_mode">Modo Escuro</string>

    <!-- execution_exercise -->
    <string name="exercise_image_description">Execução do exercício</string>

    <!-- Buttons -->
    <string name="decrease_series">Diminuir número de séries</string>
    <string name="increase_series">Aumentar número de séries</string>
    <string name="decrease_repetitions">Diminuir número de repetições</string>
    <string name="increase_repetitions">Aumentar número de repetições</string>
    <string name="decrease_weight">Diminuir peso</string>
    <string name="increase_weight">Aumentar peso</string>
</resources>