<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.training.presentation.ui.home.TrainingCreationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/training_creation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/training_creation_title_text"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/training_creation_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/training_creation_description_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/training_creation_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/training_creation_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/training_creation_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/training_creation_field_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="Name"
        android:hint="@string/training_creation_type_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/training_creation_end_guideline"
        app:layout_constraintStart_toStartOf="@id/training_creation_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/training_creation_description_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/training_creation_add_exercises_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:text="@string/training_creation_add_exercises_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/training_creation_end_guideline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/training_creation_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/training_creation_field_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/training_creation_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/training_creation_button"
        app:layout_constraintEnd_toStartOf="@+id/training_creation_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/training_creation_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/training_creation_add_exercises_text_view"
        tools:listitem="@layout/remove_exercise_item"/>

    <Button
        android:id="@+id/training_creation_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@drawable/ic_button_background_selector"
        android:contentDescription="@string/training_creation_button_description"
        android:text="@string/training_creation_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/training_creation_end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/training_creation_start_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/training_creation_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/training_creation_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <Button
        android:id="@+id/training_creation_button_add"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/training_creation_button_description"
        android:foreground="@drawable/baseline_add_circle_24"
        android:foregroundTint="#0612F6"
        app:layout_constraintBottom_toBottomOf="@+id/training_creation_add_exercises_text_view"
        app:layout_constraintEnd_toEndOf="@+id/training_creation_add_exercises_text_view"
        app:layout_constraintTop_toTopOf="@+id/training_creation_add_exercises_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>