<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/select_exercises_item_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/select_exercises_item_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/select_exercises_item_check_box"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Exercise name" />

        <ImageView
            android:id="@+id/select_exercises_item_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_exercises_item_name_text_view"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/controls_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/select_exercises_item_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select_exercises_item_image_view"
            app:layout_constraintTop_toBottomOf="@+id/select_exercises_item_name_text_view">

            <!-- Séries -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_exercise_series_text"
                    android:textColor="@color/slater_grey"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/decrease_series_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/decrease_series"
                        android:src="@drawable/ic_remove_red" />

                    <TextView
                        android:id="@+id/item_select_series_field_text_view"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="3" />

                    <ImageButton
                        android:id="@+id/increase_series_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/increase_series"
                        android:src="@drawable/ic_add_green" />
                </LinearLayout>
            </LinearLayout>

            <!-- Repetições -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_exercise_repetitions_text"
                    android:textColor="@color/slater_grey"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/decrease_repetitions_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/decrease_repetitions"
                        android:src="@drawable/ic_remove_red" />

                    <TextView
                        android:id="@+id/item_select_repetitions_field_text_view"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="12" />

                    <ImageButton
                        android:id="@+id/increase_repetitions_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/increase_repetitions"
                        android:src="@drawable/ic_add_green" />
                </LinearLayout>
            </LinearLayout>

            <!-- Peso -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_exercise_weights_or_bars_text"
                    android:textColor="@color/slater_grey"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/decrease_weight_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/decrease_weight"
                        android:src="@drawable/ic_remove_red" />

                    <TextView
                        android:id="@+id/item_select_weights_or_bars_field_text_view"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="20" />

                    <ImageButton
                        android:id="@+id/increase_weight_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/increase_weight"
                        android:src="@drawable/ic_add_green" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>